@@ -18,6 +18,7 @@
 
 package org.apache.giraph.comm;
 
+import java.net.InetSocketAddress;
 import org.apache.giraph.GiraphConfiguration;
 import org.apache.giraph.ImmutableClassesGiraphConfiguration;
 import org.apache.giraph.comm.messages.SimpleMessageStore;
@@ -101,7 +102,9 @@ public class RequestTest {
         new WorkerRequestServerHandler.Factory(serverData));
     server.start();
     client = new NettyClient(context, conf);
-    client.connectAllAddresses(Collections.singleton(server.getMyAddress()));
+    Map<InetSocketAddress, Integer> addressIdMap = Maps.newHashMap();
+    addressIdMap.put(server.getMyAddress(), -1);
+    client.connectAllAddresses(addressIdMap);
   }
 
   @Test
