@@ -2,6 +2,10 @@ Giraph Change Log
 
 Release 0.2.0 - unreleased
 
+  GIRAPH-360: Keep track of the task id in ChannelRotater to send
+  requests without knowing the worker id upfront (aching via
+  ekoontz)
+
   GIRAPH-307: InputSplit list can be long with many workers 
   (and locality info) and should not be re-created every time a 
   worker calls reserveInputSplit() (ereisman via majakabiljo)
